force-app/main/default/objects/SFS_AB_Capacity_Batch_Configuration__mdt/SFS_AB_Capacity_Batch_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>SFS AB Capacity Batch Configuration</label>
    <pluralLabel>SFS AB Capacity Batch Configuration</pluralLabel>
</CustomObject>