force-app/main/default/objects/SFS_AB_Capacity_Batch_Configuration__mdt/fields/Batch_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Name__c</fullName>
    <label>Batch Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>