force-app/main/default/objects/SFS_AB_Capacity_Batch_Configuration__mdt/fields/Batch_Job_Timezones__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Timezones__c</fullName>
    <label>Batch Job Timezones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America/New_York</fullName>
                <default>true</default>
                <label>America/New_York</label>
            </value>
            <value>
                <fullName>America/Chicago</fullName>
            </value>
            <value>
                <fullName>America/Panama</fullName>
            </value>
            <value>
                <fullName>America/Denver</fullName>
            </value>
            <value>
                <fullName>America/Los_Angeles</fullName>
            </value>
            <value>
                <fullName>America/Phoenix</fullName>
            </value>
            <value>
                <fullName>America/Anchorage</fullName>
            </value>
            <value>
                <fullName>Pacific/Honolulu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>