force-app/main/default/objects/SFS_AB_Capacity_Batch_Configuration__mdt/fields/Territory_Flag__c.field-meta.xml
<CustomField>
    <fullName>Territory_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Territory Flag</label>
    <type>Checkbox</type>
</CustomField>